# assessment-lens

./: CLAUDE.md  README.md  pyproject.toml
docs/: SCOPING.md
examples/: data-viz-rubric.yaml
src/assessment_lens/: __init__.py  alignment.py  api.py  assess.py  bundle.py  cli.py  distinctiveness.py  draft_rubric.py  exceptions.py  llm.py  manifest.py  models.py  report.py  rubric.py
tests/: test_alignment.py  test_api.py  test_cli.py  test_distinctiveness.py  test_draft_rubric.py  test_llm_provider.py  test_models.py  test_rubric.py
