[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assessment-lens"
version = "0.4.0"
description = "Signals-based assessment — map analyser signals to a rubric as observations, never grades. A human assigns every mark."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Borck", email = "michael.borck@curtin.edu.au" }]
keywords = ["assessment", "rubric", "education", "edtech", "signals", "lens", "feedback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# A lens is a *consumer*, not an analyser: no fastapi / uvicorn / lens-contract /
# manifest here. It reads rubrics, composes bundle-analyser, and renders reports.
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# bundle-analyser is invoked as a subprocess (the `bundle-analyser` CLI on PATH).
# Install this extra to pull the whole analyser stack into the same environment;
# otherwise point assessment-lens at an already-installed bundle-analyser.
analysers = [
    "bundle-analyser>=0.1.0",
]
# Opt-in LLM features: alignment-check narration + draft-rubric (narrate-and-cite;
# never scores). Multi-provider: Anthropic by default, or a LOCAL model via Ollama
# (and any OpenAI-compatible endpoint) for privacy — set ASSESSMENT_LENS_PROVIDER.
llm = [
    "anthropic>=0.40.0",
    "openai>=1.12.0",
]
# Binary specs (.pdf/.docx/.pptx) for draft-rubric are extracted via the
# family's canonical extractor.
documents = [
    "document-analyser>=0.5.0",
]
# Cohort-relative distinctiveness. Only lens-embed's numpy-only CORE is needed —
# the lens is a *consumer* of the vectors the analysers already produced, not a
# producer. (For vectors to exist, the analysers must be installed with their
# own [embeddings] extras; otherwise distinctiveness is simply left None.)
distinctiveness = [
    "lens-embed>=0.1.1",
]
# The HTTP face: what the desktop shell (or any UI) talks to. Opt-in — the CLI
# path needs none of this. Same /health + /manifest contract as the analysers.
serve = [
    "lens-contract>=0.3.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "lens-embed>=0.1.1",  # so the distinctiveness maths is exercised in tests
    "lens-contract>=0.3.0",  # manifest + contract routes for the API tests
    "fastapi>=0.109.0",
    "httpx>=0.27.0",  # fastapi TestClient
]

[tool.uv.sources]
bundle-analyser = { path = "../bundle-analyser", editable = true }
document-analyser = { path = "../document-analyser", editable = true }
lens-embed = { path = "../lens-embed", editable = true }
lens-contract = { path = "../lens-contract", editable = true }

[project.scripts]
assessment-lens = "assessment_lens.cli:main"

[project.urls]
Homepage = "https://github.com/michael-borck/assessment-lens"
Repository = "https://github.com/michael-borck/assessment-lens"
Issues = "https://github.com/michael-borck/assessment-lens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/assessment_lens"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
